--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -80,6 +80,8 @@ androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "ro
 
 # coil
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
+coil-svg-compose = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coilCompose" }
+
 coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coilCompose" }
 
 # gson
