--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistFlowlayout = "0.20.0"
 agp = "8.9.0"
 kotlin = "2.1.10"
 coreKtx = "1.15.0"
@@ -31,6 +32,7 @@ animation = "1.7.8"
 
 [libraries]
 # animation
+accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanistFlowlayout" }
 androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "animation" }
 
 androidx-material = { module = "androidx.compose.material:material", version.ref = "composeMaterial" }
