--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,31 @@
 [versions]
 accompanistFlowlayout = "0.20.0"
 agp = "8.9.0"
+credentials = "1.5.0"
+credentialsPlayServicesAuth = "1.5.0"
+datastorePreferences = "1.1.6"
+firebaseAuth = "23.2.0"
+firebaseBom = "33.13.0"
+firebaseFirestoreKtx = "25.1.4"
 glanceAppwidget = "1.1.1"
 glanceMaterial3 = "1.1.1"
+googleid = "1.1.1"
 kotlin = "2.1.10"
-coreKtx = "1.15.0"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.7"
+lifecycleRuntimeKtx = "2.9.0"
 activityCompose = "1.10.1"
-composeBom = "2025.04.01"
+composeBom = "2025.05.00"
 appcompat = "1.7.0"
+lottieCompose = "6.5.2"
 material = "1.12.0"
-composeNavigation = "2.8.9"
-composeMaterial = "1.8.0"
-serialization = "1.6.3"
-uiTestJunit4Android = "1.8.0"
+composeNavigation = "2.9.0"
+composeMaterial = "1.8.1"
+playServicesLocation = "21.3.0"
+serialization = "1.7.3"
+uiTestJunit4Android = "1.8.1"
 accompanistPagerIndicators = "0.28.0"
 accompanistPager = "0.28.0"
 coilCompose = "3.0.4"
@@ -29,18 +38,26 @@ loggingInterceptor = "4.9.3"
 pagingCompose = "3.3.6"
 retrofit = "2.9.0"
 roomKtx = "2.7.1"
-animation = "1.8.0"
+animation = "1.8.1"
 workRuntimeKtx = "2.10.1"
 iconExtend = "1.7.8"
 
-
 [libraries]
-# animation
+
+# flow layout
 accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanistFlowlayout" }
+
+# animation
 androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "animation" }
 
+# data store
+androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentials" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+
+# glance
 androidx-glance-appwidget = { module = "androidx.glance:glance-appwidget", version.ref = "glanceAppwidget" }
 androidx-glance-material3 = { module = "androidx.glance:glance-material3", version.ref = "glanceMaterial3" }
+
 androidx-material = { module = "androidx.compose.material:material", version.ref = "composeMaterial" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -54,10 +71,25 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+
+# work manager
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
+
+# firebase
+credentials-play-services-auth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentialsPlayServicesAuth" }
+firebase-auth = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuth" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-firestore-ktx = { module = "com.google.firebase:firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+firebase-storage = { module = "com.google.firebase:firebase-storage" }
+googleid = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleid" }
+
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+
+# LottieFiles
+lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieCompose" }
+
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-ui-test-junit4-android = { group = "androidx.compose.ui", name = "ui-test-junit4-android", version.ref = "uiTestJunit4Android" }
 
@@ -105,6 +137,7 @@ hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", ve
 
 # retrofit
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 
 
