--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ material = "1.12.0"
 composeNavigation = "2.9.0"
 composeMaterial = "1.8.1"
 material3Android = "1.4.0"
+playServicesAuth = "21.0.0"
 playServicesLocation = "21.3.0"
 serialization = "1.7.3"
 uiTestJunit4Android = "1.8.1"
@@ -59,6 +60,7 @@ projectTargetSdkVersion = "36"
 projectCompileSdkVersion = "36"
 material3Version = "1.0.0-alpha13"
 uiGraphics = "1.10.0"
+playServicesAuthVersion = "21.5.0"
 
 [libraries]
 
@@ -172,6 +174,7 @@ android-tools-common = { module = "com.android.tools:common", version.ref = "and
 ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 material3 = { group = "androidx.xr.compose.material3", name = "material3", version.ref = "material3Version" }
 androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version.ref = "uiGraphics" }
+play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServicesAuthVersion" }
 
 [bundles]
 firebase = [
