--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,6 +51,7 @@ androidTools = "31.12.0"
 material3Adaptive = "1.1.0"
 coroutines = "1.10.2"
 ksp = "2.1.0-1.0.29"
+pager = "1.10.1"
 
 projectAppId = "com.example.allinone"
 projectVersionName = "1.0.0"
@@ -165,6 +166,9 @@ play-services-location = { module = "com.google.android.gms:play-services-locati
 
 # coroutines
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+
+# pager
+foundation-pager = { group = "androidx.compose.foundation", name = "foundation", version.ref = "pager" }
 
 # gradle
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
